--- a/style.css
+++ b/style.css
@@ -3,8 +3,14 @@ body {
 	margin: 0px;
 }
 
+a {
+	font-family: "Arial", Calibri, Dejavu Sans;
+	color: #7cb5f0;
+}
+
 .header {
-	vetical-align: top;
+	position: fixed;
+	
 	background-color: #fafafa;
 	width: 100%;
 	padding-bottom: 7px;
@@ -22,11 +28,71 @@ body {
 	user-select: none;
 }
 
-.pixel_editor{
-	width: 250px; 
-	height: 400px;
+.footer {
+	position: fixed;
+	top: 95%;
+	width: 100%;
+	height: 50px;
+	background-color: #fafafa;
+	text-align: center;
+	padding: 10px;
+}
+
+.page_content {
+	position: fixed;
+	left: 20%;
+	top: 100px;
+	background-color: blue;
+}
+
+.code_box, .preview_box, .option_box,
+.box {
 	margin: 8px;
-	float: left;
+	padding: 8px;
+	background-color: #f5f2f0;
+	border-radius: 10px;
+}
+
+.box_title{
+	font-family: "Arial", Calibri, Dejavu Sans;
+	margin-bottom: 5px;
+	user-select: none;
+}
+
+
+.code_box {
+	position: absolute;
+	left: 260px;
+	top: 141px;
+	width: 313px;
+	height: 460px;
+}
+
+.code_text {
+	width: 313px;
+	height: 262px;
+	resize: none;
+	background-color: transparent;
+	border: none;
+}
+
+
+.option_box {
+	position: absolute;
+	top: 400px;
+	width: 235px;
+	height: 200px;
+}
+
+.pixel_editor{
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	
+	width: 250px; 
+	height: 390px;
+	margin: 8px;
+	float: center;
 	border-radius: 10px;
 	background-color: #4db7bb;
 }
@@ -36,6 +102,7 @@ body {
 }
 
 .char_name_input {
+	text-align: center;
 	border-radius: 4px;
 	border: none;
 	margin-top: 10px;
@@ -44,7 +111,7 @@ body {
 
 .button {
 	background-color: transparent;
-	margin-bottom: 5px;
+	margin-bottom: 8px;
 	border: black 1px solid;
 	border-radius: 4px;
 }
@@ -52,14 +119,15 @@ body {
 .pixel_box{
 	width: 205px; 
 	height: 326px;
-	margin: auto;
 	user-select: none;
+	margin: auto;
 }
 
 .pixel_on {
 	width: 32px;
 	height: 32px;
 	margin: 2px;
+	box-sizing: border-box;
 	background-color: #006468;
 	border: #006468 1px solid;
 	display: inline-block;
@@ -69,32 +137,18 @@ body {
 	width: 32px;
 	height: 32px;
 	margin: 2px;
+	box-sizing: border-box;
 	border: #000 1px solid;
 	background-color: transparent;
 	display: inline-block;
 }
 
-.code_box {
-	width: 250px;
-	height: 170px;
-	float: left;
-	margin: 8px;
-	padding: 8px;
-	resize: none;
-	background-color: #f5f2f0;
-	border: none;
-	border-radius: 10px;
-}
-
 .preview_box {
+	position: absolute;
+	left: 260px;
+	top: 0px;
 	width: 470px;
-	height: 86px;
-	float: left;
-	margin: 8px;
-	padding: 8px;
-	background-color: #f5f2f0;
-	border: none;
-	border-radius: 10px;
+	height: 115px;
 }
 
 .lcd_pixel {
@@ -120,7 +174,7 @@ td {
 	width: 25px;
 	height: 40px;
 	box-sizing: border-box;
-	border: 2px solid red;
+	border: 2px solid orange;
 	border-collapse: collapse;
 	table-layout: fixed;
 	margin: 2px;
