--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ a {
 	color: #7cb5f0;
 }
 
+.checkbox {
+	position: relative;
+	top: 2px;
+}
+
 .header {
 	position: fixed;
 	
@@ -65,7 +70,7 @@ a {
 	left: 260px;
 	top: 141px;
 	width: 313px;
-	height: 460px;
+	height: 440px;
 }
 
 .code_text {
@@ -81,7 +86,7 @@ a {
 	position: absolute;
 	top: 400px;
 	width: 235px;
-	height: 200px;
+	height: 180px;
 }
 
 .pixel_editor{
