--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 a {
 	font-family: "Arial", Calibri, Dejavu Sans;
 	color: #7cb5f0;
+  font-size: 14px;
 }
 
 .checkbox {
@@ -43,19 +44,27 @@ a {
 	padding: 10px;
 }
 
+.license_text{
+  position: absolute;
+  top: 10px;
+  left: 20px;
+  color: #7cb5f0;
+  user-select: none;
+}
+
 .page_content {
 	position: fixed;
-	left: 20%;
+  left: 20%;
 	top: 100px;
 	background-color: blue;
 }
 
-.code_box, .preview_box, .option_box,
+.code_box, .preview_box, .option_box, .about_box,
 .box {
 	margin: 8px;
 	padding: 8px;
 	background-color: #f5f2f0;
-	border-radius: 10px;
+	border-radius: 7px;
 }
 
 .box_title{
@@ -70,22 +79,29 @@ a {
 	left: 260px;
 	top: 141px;
 	width: 313px;
-	height: 440px;
+	height: 234px;
 }
 
 .code_text {
 	width: 313px;
-	height: 262px;
+	height: 200px;
 	resize: none;
 	background-color: transparent;
 	border: none;
 }
 
-
 .option_box {
 	position: absolute;
 	top: 400px;
 	width: 235px;
+	height: 180px;
+}
+
+.about_box {
+  position: absolute;
+	top: 400px;
+  left: 260px;
+	width: 470px;
 	height: 180px;
 }
 
