--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ a {
 	
 	background-color: #fafafa;
 	width: 100%;
+  height: 60px;
 	padding-bottom: 7px;
 	padding-top: 7px;
 	
@@ -28,7 +29,19 @@ a {
 }
 	
 .header_title {
-	font-size: 20px;
+  position: relative;
+  top: -15px;
+	font-size: 30px;
+	text-align: center;
+	font-family: "Arial", Calibri, Dejavu Sans;
+	user-select: none;
+}
+
+.header_subtitle {
+  position: relative;
+  top: -35px;
+	font-size: 12px;
+  font-weight: normal;
 	text-align: center;
 	font-family: "Arial", Calibri, Dejavu Sans;
 	user-select: none;
@@ -78,7 +91,7 @@ a {
 	position: absolute;
 	left: 260px;
 	top: 141px;
-	width: 313px;
+	width: 298px;
 	height: 234px;
 }
 
@@ -92,9 +105,10 @@ a {
 
 .option_box {
 	position: absolute;
-	top: 400px;
-	width: 235px;
-	height: 180px;
+	top: 141px;
+  left: 580px;
+	width: 150px;
+	height: 234px;
 }
 
 .about_box {
