Added editor icon option sidebar

--- a/style.css
+++ b/style.css
@@ -72,7 +72,8 @@ a {
 	background-color: blue;
 }
 
-.code_box, .preview_box, .option_box, .about_box,
+
+.code_box, .preview_box, .option_box, .about_box, .share_box, .editor_options_box,
 .box {
 	margin: 8px;
 	padding: 8px;
@@ -86,10 +87,38 @@ a {
 	user-select: none;
 }
 
+.share_box{
+  position: absolute;
+  top: 400px;
+  left: 60px;
+  width: 235px;
+  height: 75px;
+}
+
+.editor_options_box {
+  position: absolute;
+  top: 0px;
+  width: 40px;
+  height: 375px;
+  background-color: #97d1d3;
+  z-index: 3;
+}
+
+.editor_image {
+}
+
+.image_description {
+  position: relative;
+  top: -30px;
+  left: 20px;
+  background-color: white;
+  font-size: 8px; 
+  width: 30px;
+}
 
 .code_box {
 	position: absolute;
-	left: 260px;
+	left: 320px;
 	top: 141px;
 	width: 298px;
 	height: 234px;
@@ -106,7 +135,7 @@ a {
 .option_box {
 	position: absolute;
 	top: 141px;
-  left: 580px;
+  left: 640px;
 	width: 150px;
 	height: 234px;
 }
@@ -114,14 +143,14 @@ a {
 .about_box {
   position: absolute;
 	top: 400px;
-  left: 260px;
+  left: 320px;
 	width: 470px;
 	height: 180px;
 }
 
 .pixel_editor{
 	position: absolute;
-	left: 0px;
+	left: 60px;
 	top: 0px;
 	
 	width: 250px; 
@@ -140,8 +169,8 @@ a {
 	text-align: center;
 	border-radius: 4px;
 	border: none;
-	margin-top: 10px;
-	margin-bottom: 5px;
+	margin-top: 17px;
+	margin-bottom: 20px;
 }
 
 .button {
@@ -180,7 +209,7 @@ a {
 
 .preview_box {
 	position: absolute;
-	left: 260px;
+	left: 320px;
 	top: 0px;
 	width: 470px;
 	height: 115px;
