--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ Main page body
 *************/
 #page-content {
   position: fixed;
-  left: 20%;
+  left: 23%;
   top: 100px;
   background-color: blue;
 }
@@ -101,7 +101,7 @@ Main page body
   top: 0px;
   width: 40px;
   height: 375px;
-  background-color: #97d1d3;
+  background-color: #97d1d3; 
 }
 
 
@@ -173,12 +173,18 @@ Main page body
 
 #pixel-editor__charname {
   text-align: center;
+  font-family: 'Arial', Calibri, Dejavu Sans;
+  font-weight: bold;
   border-radius: 4px;
   border: none;
   margin-top: 17px;
   margin-bottom: 20px;
 }
 
+#pixel-editor__clipboard {
+  position: absolute;
+  display: none;
+}
 
 .pixel-on {
   width: 32px;
@@ -233,7 +239,7 @@ td {
   width: 25px;
   height: 40px;
   box-sizing: border-box;
-  border: 2px solid orange;
+  border: 2px solid #0f9bae;
   border-collapse: collapse;
   table-layout: fixed;
   margin: 2px;
