--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 
 /* Header */
-#header-bar {
+header {
   position: fixed;
   background-color: #fafafa;
   width: 100%;
@@ -38,11 +38,11 @@ body {
 
 
 /* Footer */
-#footer-bar {
+footer {
   position: fixed;
   top: 95%;
   width: 100%;
-  height: 50px;
+  height: 100%;
   background-color: #fafafa;
   text-align: center;
   padding: 10px;
