--- a/styles/home-page__style.css
+++ b/styles/home-page__style.css
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<!-- 
+/*
 {{ Chareditor.com }}
 Copyright (C) {{ 2020 }}  {{ alestiago }}
 
@@ -15,23 +14,28 @@ GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>. 
--->
+*/
 
 
-<html>
+body {
+  padding: 0px;
+  margin: 0px;
+  background-color: black;
+}
 
-<head>
-  <meta charset="utf-8">
-  <meta name="description" content="Online design editor to easily create LCD custom characters with self generating code.">
-  <title>Chareditor.com</title>
-  <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
-  <link href="styles/home-page__style.css" rel="stylesheet" type="text/css" />
-</head>
+#page-logo {
+  width: 50px;
+  height: 50px;
+  margin: 0.5%;
+  border-radius: 50%;
+  background-color: white;
+  text-align: center;
+}
 
-<body>
-  <div id="page-logo">
-    <img class="vertical-center" src="images/logo.png" title="Chareditor.com">
-  </div>
-</body>
-
-</html>
+.vertical-center {
+  margin: 0;
+  position: relative;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
