--- a/styles/home-page__style.css
+++ b/styles/home-page__style.css
@@ -29,13 +29,13 @@ body {
   margin: 0.5%;
   border-radius: 50%;
   background-color: white;
-  text-align: center;
 }
 
-.vertical-center {
+.center {
   margin: 0;
   position: relative;
   top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
