--- a/styles/home-page__style.css
+++ b/styles/home-page__style.css
@@ -16,11 +16,15 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>. 
 */
 
+html {
+  height: 100%;
+}
 
 body {
+  height: 100%;
   padding: 0px;
   margin: 0px;
-  background-color: black;
+  background-image: linear-gradient(black, #222830);
 }
 
 #page-logo {
