--- a/styles/home-page__style.css
+++ b/styles/home-page__style.css
@@ -35,6 +35,14 @@ body {
   background-color: white;
 }
 
+#page-options {
+  color: white;
+  font-size: 15px;
+  font-family: 'Open Sans', 'Arial';
+  /* text-shadow: 4px 4px 4px #252222; */
+  user-select: none;
+}
+
 .center {
   margin: 0;
   position: relative;
