--- a/styles/home-page__style.css
+++ b/styles/home-page__style.css
@@ -24,23 +24,10 @@ body {
   height: 100%;
   padding: 0px;
   margin: 0px;
-  background-image: linear-gradient(black, #222830);
-}
-
-#page-logo {
-  width: 50px;
-  height: 50px;
-  margin: 0.5%;
-  border-radius: 50%;
-  background-color: white;
-}
-
-#page-options {
-  color: white;
-  font-size: 15px;
+  background-image: linear-gradient(#0f1113, #062340);
   font-family: 'Open Sans', 'Arial';
-  /* text-shadow: 4px 4px 4px #252222; */
-  user-select: none;
+  color: white;
+  font-family: 'Open Sans', 'Arial';
 }
 
 .center {
@@ -50,4 +37,61 @@ body {
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+}
+
+
+.horizontal-center {
+  margin: 0;
+  position: absolute;
+  left: 50%;
+  -ms-transform: translateX(-50%);
+  transform: translatex(-50%);
+}
+
+#page-logo {
+  width: 50px;
+  height: 50px;
+  margin-left: 5%;
+  margin-top: 1%;
+  border-radius: 50%;
+  background-color: white;
+}
+
+#page-options {
+  font-size: 15px;
+  /* text-shadow: 4px 4px 4px #252222; */
+  user-select: none;
+}
+
+#page-description {
+  position: relative;
+  top: 20%;
+  text-align: center;
+}
+
+
+#page-description__title {
+  font-size: 50px;
+}
+
+#page-description__subtitle {
+  font-size: 20px;
+  font-weight: none;
+  font-family: 'Lato', 'Arial';
+}
+
+#page-description__button {
+  border: 0px;
+  border-radius: 7px;
+  transition: background-color .7s ease;
+  background-color: #51c7ca;
+  color: white;
+  margin-top: 2%;
+  height: 50px;
+  font-family: 'Open Sans', 'Arial';
+}
+
+#page-description__button:hover{
+  transition: background-color .7s ease;
+  background-color: #36e9ef;
 }
