--- a/styles/home-page__style.css
+++ b/styles/home-page__style.css
@@ -18,6 +18,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 html {
   height: 100%;
+  background-color: #062340;
 }
 
 body {
@@ -49,10 +50,11 @@ body {
 }
 
 #page-logo {
+  position: relative;
+  top: 2%;
+  margin-left: 5%;
   width: 50px;
   height: 50px;
-  margin-left: 5%;
-  margin-top: 1%;
   border-radius: 50%;
   background-color: white;
 }
