--- a/styles/home-page__style.css
+++ b/styles/home-page__style.css
@@ -40,13 +40,19 @@ body {
   transform: translate(-50%, -50%);
 }
 
-
+#copyright-text,
 .horizontal-center {
   margin: 0;
   position: absolute;
   left: 50%;
   -ms-transform: translateX(-50%);
   transform: translatex(-50%);
+}
+
+#copyright-text,
+.bottom {
+  position: fixed;
+  bottom: 2%;
 }
 
 #page-logo {
@@ -96,4 +102,14 @@ body {
 #page-description__button:hover{
   transition: background-color .7s ease;
   background-color: #36e9ef;
+}
+
+/* Potentially redundant class already in style.css */
+#copyright-text {
+  color: white;
+  opacity: 0.7;
+  text-decoration: none;
+  font-family: 'Open Sans', 'Arial';
+  font-size: 10px;
+  user-select: none;
 }
