--- a/styles/home-page__style.css
+++ b/styles/home-page__style.css
@@ -28,9 +28,9 @@ body {
   background-image: linear-gradient(#0f1113, #062340);
   font-family: 'Open Sans', 'Arial';
   color: white;
-  font-family: 'Open Sans', 'Arial';
 }
 
+/* Can make this generic functions in a separate css */
 .center {
   margin: 0;
   position: relative;
@@ -55,28 +55,36 @@ body {
   bottom: 2%;
 }
 
-#page-logo {
+/* Header */
+header {
   position: relative;
   top: 2%;
   margin-left: 5%;
-  width: 50px;
-  height: 50px;
+}
+
+#page-logo {
+  width: 52px;
+  height: 52px;
   border-radius: 50%;
   background-color: white;
 }
 
 #page-options {
+  word-spacing: 30px;
   font-size: 15px;
+  text-decoration: none;
+  color: white;
   /* text-shadow: 4px 4px 4px #252222; */
   user-select: none;
 }
 
+
+/* Page Body Description */
 #page-description {
   position: relative;
   top: 20%;
   text-align: center;
 }
-
 
 #page-description__title {
   font-size: 50px;
@@ -104,6 +112,7 @@ body {
   background-color: #36e9ef;
 }
 
+/* Footer */
 /* Potentially redundant class already in style.css */
 #copyright-text {
   color: white;
