--- a/styles/home-page__style.css
+++ b/styles/home-page__style.css
@@ -30,6 +30,7 @@ body {
   color: white;
 }
 
+
 /* Can make this generic functions in a separate css */
 .center {
   margin: 0;
@@ -40,13 +41,20 @@ body {
   transform: translate(-50%, -50%);
 }
 
-#copyright-text,
 .horizontal-center {
   margin: 0;
   position: absolute;
   left: 50%;
   -ms-transform: translateX(-50%);
   transform: translatex(-50%);
+}
+
+.vertical-center {
+  margin: 0;
+  position: absolute;
+  left: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%)
 }
 
 #copyright-text,
@@ -62,61 +70,67 @@ header {
   margin-left: 5%;
 }
 
-#page-logo {
-  width: 52px;
-  height: 52px;
-  border-radius: 50%;
-  background-color: white;
-}
+  #page-logo {
+    width: 52px;
+    height: 52px;
+    border-radius: 50%;
+    background-color: white;
+    float: left;
+    margin-right: 5%;
+  }
 
-#page-options {
-  word-spacing: 30px;
-  font-size: 15px;
-  text-decoration: none;
-  color: white;
-  /* text-shadow: 4px 4px 4px #252222; */
-  user-select: none;
-}
+  #page-options a {
+    padding: 0px 15px;
+    font-size: 15px;
+    text-decoration: none;
+    color: white;
+    /* text-shadow: 4px 4px 4px #252222; */
+    user-select: none;
+  }
 
 
 /* Page Body Description */
 #page-description {
   position: relative;
   top: 20%;
+  width: 100%;
   text-align: center;
+  display: inline-block;
 }
 
-#page-description__title {
-  font-size: 50px;
-}
+  #page-description__title {
+    font-size: 50px;
+  }
 
-#page-description__subtitle {
-  font-size: 20px;
-  font-weight: none;
-  font-family: 'Lato', 'Arial';
-}
+  #page-description__subtitle {
+    font-size: 20px;
+    font-weight: none;
+    font-family: 'Lato', 'Arial';
+  }
 
-#page-description__button {
-  border: 0px;
-  border-radius: 7px;
-  transition: background-color .7s ease;
-  background-color: #51c7ca;
-  color: white;
-  margin-top: 2%;
-  height: 50px;
-  font-family: 'Open Sans', 'Arial';
-}
+  #page-description__button {
+    border: 0px;
+    border-radius: 7px;
+    transition: background-color .7s ease;
+    background-color: #51c7ca;
+    color: white;
+    margin-top: 2%;
+    height: 50px;
+    font-family: 'Open Sans', 'Arial';
+  }
 
-#page-description__button:hover{
-  transition: background-color .7s ease;
-  background-color: #36e9ef;
-}
+    #page-description__button:hover{
+      transition: background-color .7s ease;
+      background-color: #36e9ef;
+    }
 
 /* Footer */
 /* Potentially redundant class already in style.css */
 #copyright-text {
   color: white;
   opacity: 0.7;
+  width: 100%;
+  text-align: center;
   text-decoration: none;
   font-family: 'Open Sans', 'Arial';
   font-size: 10px;
