--- a/styles/page-editor.css
+++ b/styles/page-editor.css
@@ -1,7 +1,8 @@
 /* This file is part of chareditor.com
  * Refer to index.html for full license. */
-
-
+body {
+  color: white
+}
 
 /* Box shape */
 #editor-options-box,
@@ -10,8 +11,6 @@
 #about-box,
 #preview-box,
 .box {
-  margin: 8px;
-  padding: 8px;
   background-color: #1e5181;
   border-radius: 3px;
   user-select: none;
@@ -19,48 +18,11 @@
 
 .box-title {
   font-family: 'Open Sans', 'Arial', Calibri, Dejavu Sans;
+  margin-left: 5px;
   margin-bottom: 5px;
   color: white;
   user-select: none;
 }
-
-#option-navigation-bar {
-  width: 60px;
-  height: 100%;
-  background-color: #2e4f71;
-  text-align: center;
-}
-  
-  #option-navigation-bar__logo {
-    opacity: 0.7;
-    position: relative;
-    top: 90%;
-  }
-  
-  .option-navigation-bar__child {
-    margin: 0 auto;
-  }
-
-/* Editor Options */
-#editor-options-box {
-  position: absolute;
-  top: 0px;
-  width: 40px;
-  height: 375px;
-  background-color: #1c548a; 
-}
-
-
-#shift-up-icon {
-  position: relative;
-  top: 4px;
-}
-
-#shift-down-icon {
-  position: relative;
-  top: -7px;
-}
-
 
 /* Code */
 #code-box {
