--- a/styles/editor.css
+++ b/styles/editor.css
@@ -1,10 +1,84 @@
 /* This file is part of chareditor.com
  * Refer to index.html for full license. */
-body {
-  color: white
+
+/******************************
+        Page Background
+*******************************/
+html {
+  height: 100%;
+  background-color: #0f1113;
+  background-image: linear-gradient(#0f1113, #062340);
 }
 
-/* Box shape */
+body {
+  height: 100%;
+  padding: 0px;
+  margin: 0px;
+  color: white;
+  font-family: 'Lato', 'Arial', Calibri, Dejavu Sans;
+}
+
+
+/******************************
+     Option Navigation Bar
+*******************************/
+#options-bar {
+  height: 100%;
+  width: 40%;
+  min-width: 290px;
+}
+
+  #option-navigation-bar {
+    width: 60px;
+    height: 100%;
+    float: left;
+    display: inline-block;
+    background-color: #1a212a;
+    text-align: center;
+    box-sizing: border-box;
+  }
+  
+    #editor-options-icon,
+    #code-options-icon,
+    .options-bar__icon {
+      width: 40px;
+      padding: 10px;
+      margin-left: 3px;
+    }
+  
+    .active {
+      background-color: #232c38;
+      border-radius: 25px 0px 0px 25px;
+    }
+    
+    #option-navigation-bar__logo {
+      margin-top: 150%;
+      opacity: 0.5;
+    }
+
+  #options-bar__options__editor,
+  #options-bar__options__code,
+  .options-bar__options {
+    width: 50%;
+    max-width: 280px;
+    min-width: 140px;
+    padding-left: 10px;
+    height: 100%;
+    float: left;
+    border: solid 1px none;
+    background-color: #232c38;
+  }
+
+  .options-bar__title {
+    margin: 5px;
+    font-size: 19px;
+    color: white;
+    user-select: none;
+  }
+
+/******************************
+          Whatever
+*******************************/
 #editor-options-box,
 #code-box,
 #code-option-box,
@@ -148,4 +222,35 @@ td {
 
 .lcd-pixel__on{
   background-color: white;
+}
+
+/******************************
+          Page Footer
+*******************************/
+#copyright-text {
+  color: white;
+  opacity: 0.7;
+  width: 100%;
+  text-align: center;
+  text-decoration: none;
+  font-family: 'Open Sans', 'Arial';
+  font-size: 10px;
+  user-select: none;
+}
+
+/******************************
+          Alignment
+*******************************/
+.center {
+  margin: 0;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.bottom {
+  position: fixed;
+  bottom: 2%;
 }
