--- a/styles/editor.css
+++ b/styles/editor.css
@@ -1,13 +1,14 @@
 /* This file is part of chareditor.com
  * Refer to index.html for full license. */
 
+
 /******************************
         Page Background
 *******************************/
 html {
   height: 100%;
-  background-color: #0f1113;
-  background-image: linear-gradient(#0f1113, #062340);
+  background: linear-gradient(to right, #1a212a 0%, #1a212a 60px, #232c38 0%, #232c38 235px, #062340 0%, #1a212a 100%);
+  min-width: 745px;
 }
 
 body {
@@ -24,8 +25,10 @@ body {
 *******************************/
 #options-bar {
   height: 100%;
-  width: 40%;
-  min-width: 290px;
+  width: 25%;
+  min-width: 235px;
+  float: left;
+  display: inline-block;
 }
 
   #option-navigation-bar {
@@ -59,9 +62,9 @@ body {
   #options-bar__options__editor,
   #options-bar__options__code,
   .options-bar__options {
-    width: 50%;
-    max-width: 280px;
-    min-width: 140px;
+    width: 70%;
+    min-width: 138px;
+    float: left;
     padding-left: 10px;
     height: 100%;
     float: left;
@@ -76,17 +79,67 @@ body {
     user-select: none;
   }
 
+
 /******************************
-          Whatever
+        Pixel Editor
 *******************************/
-#editor-options-box,
+#pixel-editor {
+  width: 250px; 
+  height: 390px;
+  float: left;
+  border-radius: 5px;
+  margin: 30px 10px 0px 10px;
+  background-color: #2c415e;
+  text-align: center;
+  user-select: none;
+}
+
+  #pixel-editor__charname {
+    text-align: center;
+    font-family: 'Open Sans', Calibri, Dejavu Sans;
+    font-weight: bold;
+    border-radius: 4px;
+    border: none;
+    margin-top: 17px;
+    margin-bottom: 20px;
+  }
+
+  #pixel-editor__clipboard {
+    position: absolute;
+    display: none;
+  }
+
+  .pixel-on {
+    width: 32px;
+    height: 32px;
+    margin: 2px;
+    box-sizing: border-box;
+    background-color: white;
+    border: white 1px solid;
+    display: inline-block;
+  }
+
+  .pixel-off {
+    width: 32px;
+    height: 32px;
+    margin: 2px;
+    box-sizing: border-box;
+    border: #000 1px solid;
+    background-color: transparent;
+    display: inline-block;
+  }
+  
+  
+/******************************
+         Box Style
+*******************************/
 #code-box,
-#code-option-box,
-#about-box,
 #preview-box,
 .box {
-  background-color: #1e5181;
+  background-color: #2a405c;
   border-radius: 3px;
+  margin: 30px 10px 0px 10px;
+  padding: 10px;
   user-select: none;
 }
 
@@ -98,94 +151,12 @@ body {
   user-select: none;
 }
 
-/* Code */
-#code-box {
-  position: absolute;
-  left: 320px;
-  top: 141px;
-  width: 298px;
-  height: 234px;
-}
 
-#code-box__code {
-  width: 298px;
-  height: 200px;
-  resize: none;
-  background-color: transparent;
-  border: none;
-  color: white;
-}
-
-#code-option-box {
-  position: absolute;
-  top: 141px;
-  left: 640px;
-  width: 150px;
-  height: 234px;
-}
-
-.code-option-box__checkbox {
-  position: relative;
-  top: 2px;
-}
-
-
-/* Pixel editor */
-#pixel-editor {
-  position: absolute;
-  left: 60px;
-  top: 0px;
-  width: 250px; 
-  height: 390px;
-  margin: 8px;
-  float: center;
-  border-radius: 10px;
-  background-color: #1c548a;
-  text-align: center;
-  user-select: none;
-}
-
-#pixel-editor__charname {
-  text-align: center;
-  font-family: 'Arial', Calibri, Dejavu Sans;
-  font-weight: bold;
-  border-radius: 4px;
-  border: none;
-  margin-top: 17px;
-  margin-bottom: 20px;
-}
-
-#pixel-editor__clipboard {
-  position: absolute;
-  display: none;
-}
-
-.pixel-on {
-  width: 32px;
-  height: 32px;
-  margin: 2px;
-  box-sizing: border-box;
-  background-color: white;
-  border: white 1px solid;
-  display: inline-block;
-}
-
-.pixel-off {
-  width: 32px;
-  height: 32px;
-  margin: 2px;
-  box-sizing: border-box;
-  border: #000 1px solid;
-  background-color: transparent;
-  display: inline-block;
-}
-
-
-/* Preview */
+/******************************
+         Preview Box
+*******************************/
 #preview-box {
-  position: absolute;
-  left: 320px;
-  top: 0px;
+  float: left;
   width: 470px;
   height: 115px;
 }
@@ -194,7 +165,6 @@ body {
   width: 25px;
   height: 40px;
   box-sizing: border-box;
-  border: 1px solid black;
   border-collapse: collapse;
   table-layout: fixed;
   margin: 2px;
@@ -205,7 +175,7 @@ td {
   width: 4px;
   height: 4px;
   box-sizing: border-box;
-  border: 1px solid black;
+  border: 1px solid #22262c;
   border-collapse: collapse;
 }
 
@@ -224,6 +194,33 @@ td {
   background-color: white;
 }
 
+
+/******************************
+          Code Box
+*******************************/
+#code-box {
+  float: left;
+  width: 40%;
+  min-width: 470px;
+  height: 40%;
+  min-height: 140px;
+}
+
+  #code-box__code {
+    width: 100%;
+    height: 85%;
+    resize: none;
+    background-color: transparent;
+    border: none;
+    color: white;
+  }
+
+.code-option-box__checkbox {
+  position: relative;
+  top: 2px;
+}
+
+
 /******************************
           Page Footer
 *******************************/
@@ -238,18 +235,20 @@ td {
   user-select: none;
 }
 
+
 /******************************
           Alignment
 *******************************/
-.center {
+#copyright-text,
+.horizontal-center {
   margin: 0;
-  position: relative;
-  top: 50%;
+  position: fixed;
   left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  -ms-transform: translateX(-50%);
+  transform: translatex(-50%);
 }
 
+#copyright-text,
 .bottom {
   position: fixed;
   bottom: 2%;
